# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  diff.py  parse.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
